--- a/static/styles.css
+++ b/static/styles.css
@@ -1,7 +1,7 @@
 
-body            { font-family: sans-serif; background-image: url('img3.jpg'); background-color: #333333}
+body            { font-family: sans-serif; background-image: url('img3.jpg'); background-color: #2E3E50}
 h1, h2, h3, h4       { color: #FFFFFF; }
-h1, h2          { font-family: 'Georgia', serif; margin: 0; }
+h1, h2          { font-family: 'Helvetica', serif; margin: 0; }
 h1              { border-bottom: 2px solid #eee; }
 h2              { font-size: 1.2em; }
 
@@ -9,8 +9,7 @@ p, dd, dt               { color: #CCCCCC;}
 
 a {text-decoration: none; color:#FFFFCC; font-size: .75em;}
 
-.pane {position:absolute; left: 25%; border: 2px solid;
-    border-radius: 25px; padding: 5px; margin: 5px; border-color: #999999; background-color: #333333 }
+.pane {position:absolute; left: 25%; border: 2px solid; padding: 5px; margin: 5px; border-color: #999999; background-color: #333333 }
 .header         {left:50%; text-align: center;}
 .name {width:50%;display: inline-block; float: left;}
 .description {}
